--- a/tetris.html
+++ b/tetris.html
@@ -619,7 +619,7 @@ button.menuBtn.locked::after {
     <button class="menuBtn" onclick="backToMainMenu()">⬅ Zpět</button>
 </div>
 <div id="leaderboard" class="centered">
-    <h1>🏆 Žebříček 🏆</h1>
+    <h1>🏆 žebříček 🏆</h1>
     <div class="loading">Načítání žebříčku...</div>
     <table id="leaderboardTable" style="display:none;">
         <tr><th>Pozice</th><th>Hráč</th><th>Skóre</th><th>Obtížnost</th><th>Datum</th></tr>
@@ -634,6 +634,7 @@ button.menuBtn.locked::after {
                 <h3>DALŠÍ</h3>
                 <div id="nextPiece"></div>
             </div>
+        </div>
         <div>
             <div id="tetris"></div>
         </div>
@@ -1582,4 +1583,3 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
-
