--- a/tetris.html
+++ b/tetris.html
@@ -1238,7 +1238,7 @@ function endEvent() {
 // Spustí náhodný event každých 20-40 sekund během hry
 function startEventSystem() {
     const scheduleNextEvent = () => {
-        const delay = 20000 + Math.random() * 20000; // 20-40s
+        const delay = 60000 + Math.random() * 120000; // 60-180s (1-3 minuty)
         setTimeout(() => {
             if (!isGameOver) {
                 triggerRandomEvent();
@@ -1247,7 +1247,7 @@ function startEventSystem() {
         }, delay);
     };
     scheduleNextEvent();
-}    
+}
 
 window.backToMainMenu = function() {
     document.getElementById('mainMenu').style.display = 'flex'
@@ -1863,6 +1863,7 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
