--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -405,7 +405,8 @@ body::before {
 }
 
 .reel.spinning {
-    filter: blur(5px);
+    filter: blur(2px);
+    opacity: 0.9;
 }
 
 .reel.stopping {
@@ -413,9 +414,21 @@ body::before {
 }
 
 @keyframes reelStop {
-    0% { filter: blur(5px); transform: scale(1); }
-    50% { filter: blur(0); transform: scale(1.05); }
-    100% { filter: blur(0); transform: scale(1); }
+    0% { 
+        filter: blur(2px); 
+        transform: scale(1);
+        opacity: 0.9;
+    }
+    50% { 
+        filter: blur(0); 
+        transform: scale(1.05);
+        opacity: 1;
+    }
+    100% { 
+        filter: blur(0); 
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 .reel-inner {
@@ -1944,5 +1957,6 @@ window.addEventListener('load', async () => {
 
 </body>
 </html>
+
 
 
