--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -1210,7 +1210,22 @@ const shopItems = [
     { id: 'gold', name: '🌟 Zlatý', price: 1000, icon: '🌟', colors: { primary: '#ffd700', secondary: '#ffaa00' } },
     { id: 'fire', name: '🔥 Ohnivý', price: 1500, icon: '🔥', colors: { primary: '#ff4500', secondary: '#ff8c00' } },
     { id: 'ocean', name: '🌊 Oceán', price: 2000, icon: '🌊', colors: { primary: '#0080ff', secondary: '#00ffff' } },
-    { id: 'rainbow', name: '🌈 Duha', price: 3000, icon: '🌈', colors: { primary: '#ff00ff', secondary: '#00ff00' } }
+    { id: 'rainbow', name: '🌈 Duha', price: 3000, icon: '🌈', colors: { primary: '#ff00ff', secondary: '#00ff00' } },
+    { id: 'emerald', name: '💚 Smaragd', price: 3500, icon: '💚', colors: { primary: '#00ff88', secondary: '#00cc66' } },
+    { id: 'royal', name: '👑 Královský', price: 4000, icon: '👑', colors: { primary: '#9400d3', secondary: '#ffd700' } },
+    { id: 'toxic', name: '☢️ Toxický', price: 4500, icon: '☢️', colors: { primary: '#39ff14', secondary: '#ccff00' } },
+    { id: 'sunset', name: '🌅 Západ slunce', price: 5000, icon: '🌅', colors: { primary: '#ff6b35', secondary: '#ff8c42' } },
+    { id: 'ice', name: '❄️ Ledový', price: 5500, icon: '❄️', colors: { primary: '#00d9ff', secondary: '#a3e4f7' } },
+    { id: 'vampire', name: '🧛 Upíří', price: 6000, icon: '🧛', colors: { primary: '#8b0000', secondary: '#dc143c' } },
+    { id: 'matrix', name: '💻 Matrix', price: 6500, icon: '💻', colors: { primary: '#00ff00', secondary: '#008800' } },
+    { id: 'galaxy', name: '🌌 Galaxie', price: 7000, icon: '🌌', colors: { primary: '#4b0082', secondary: '#9370db' } },
+    { id: 'cherry', name: '🍒 Třešeň', price: 7500, icon: '🍒', colors: { primary: '#ff1493', secondary: '#ff69b4' } },
+    { id: 'cyber', name: '🤖 Cyber', price: 8000, icon: '🤖', colors: { primary: '#00ffff', secondary: '#ff00ff' } },
+    { id: 'diamond', name: '💎 Diamant', price: 9000, icon: '💎', colors: { primary: '#b9f2ff', secondary: '#ffffff' } },
+    { id: 'lava', name: '🌋 Láva', price: 10000, icon: '🌋', colors: { primary: '#ff4500', secondary: '#ff0000' } },
+    { id: 'mint', name: '🍃 Mátový', price: 11000, icon: '🍃', colors: { primary: '#98ff98', secondary: '#3cb371' } },
+    { id: 'lightning', name: '⚡ Blesk', price: 12000, icon: '⚡', colors: { primary: '#ffff00', secondary: '#ffa500' } },
+    { id: 'legend', name: '🏆 Legendární', price: 15000, icon: '🏆', colors: { primary: '#ffd700', secondary: '#ff1493' } }
 ];
 
 // SLOT MACHINE LOGIC
@@ -1968,6 +1983,7 @@ window.addEventListener('load', async () => {
 
 </body>
 </html>
+
 
 
 
