--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🎰 CASINO HUB - Mince a výhry! 🎰</title>
 </head>
+<link rel="stylesheet" href="styles.css">
 <body>
 <!-- Loading Screen -->
 <div id="loadingScreen">
@@ -172,6 +173,7 @@
 </div>
 </body>
 </html>
+
 
 
 
