--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🎰 CASINO HUB - Mince a výhry! 🎰</title>
-</head>
 <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 <!-- Loading Screen -->
 <div id="loadingScreen">
@@ -171,8 +171,10 @@
         <button class="modal-close" onclick="closeWinModal()">SUPER!</button>
     </div>
 </div>
+<script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
