--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -94,15 +94,17 @@
             <div class="paytable">
                 <h3>💰 VÝHRY 💰</h3>
                 <div class="paytable-grid">
-                    <div class="paytable-item">🍒🍒🍒 → 5x</div>
-                    <div class="paytable-item">🍋🍋🍋 → 4x</div>
-                    <div class="paytable-item">🍊🍊🍊 → 6x</div>
-                    <div class="paytable-item">🍇🍇🍇 → 8x</div>
-                    <div class="paytable-item">🔔🔔🔔 → 10x</div>
-                    <div class="paytable-item">⭐⭐⭐ → 15x</div>
-                    <div class="paytable-item">💎💎💎 → 20x</div>
-                    <div class="paytable-item jackpot">🎰🎰🎰 → 50x</div>
-                </div>
+    <div class="paytable-item">🍒🍒🍒 → x3</div>
+    <div class="paytable-item">🍋🍋🍋 → x4</div>
+    <div class="paytable-item">🔔🔔🔔 → x6</div>
+    <div class="paytable-item">💎💎💎 → x12</div>
+
+    <div class="paytable-item jackpot">🎰🎰🎰 → JACKPOT x25</div>
+
+    <hr style="opacity:0.3">
+
+    <div class="paytable-item">✨ 2 stejné → MENŠÍ VÝHRA</div>
+</div>
             </div>
         </div>
     </div>
@@ -174,6 +176,7 @@
 <script type="module" src="./script.js"></script>
 </body>
 </html>
+
 
 
 
