--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -55,7 +55,11 @@
     <button id="leaderboardBtn" class="game-btn" onclick="switchGame('leaderboard')">
         👑 ŽEBŘÍČEK
     </button>
+    <button id="slotV2Btn" class="game-btn" onclick="switchGame('slotV2')">
+        🎰 AUTOMAT V2 (4 sloty)
+    </button>
 </div>
+
 
     <!-- SLOT MACHINE GAME -->
     <div id="slotGame" class="game-container active">
@@ -255,6 +259,7 @@
 
 </body>
 </html>
+
 
 
 
