--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -94,15 +94,16 @@
             <div class="paytable">
                 <h3>💰 VÝHRY 💰</h3>
                 <div class="paytable-grid">
-                    <div class="paytable-item">🍒🍒🍒 → 5x</div>
-                    <div class="paytable-item">🍋🍋🍋 → 4x</div>
-                    <div class="paytable-item">🍊🍊🍊 → 6x</div>
-                    <div class="paytable-item">🍇🍇🍇 → 8x</div>
-                    <div class="paytable-item">🔔🔔🔔 → 10x</div>
-                    <div class="paytable-item">⭐⭐⭐ → 15x</div>
-                    <div class="paytable-item">💎💎💎 → 20x</div>
-                    <div class="paytable-item jackpot">🎰🎰🎰 → 50x</div>
-                </div>
+    <div class="paytable-item">🍒🍒🍒 → 5x</div>
+    <div class="paytable-item">🍋🍋🍋 → 4x</div>
+    <div class="paytable-item">🍊🍊🍊 → 6x</div>
+    <div class="paytable-item">🍇🍇🍇 → 8x</div>
+    <div class="paytable-item">🔔🔔🔔 → 10x</div>
+    <div class="paytable-item">⭐⭐⭐ → 15x</div>
+    <div class="paytable-item">💎💎💎 → 20x</div>
+    <div class="paytable-item jackpot">🎰🎰🎰 → 50x</div>
+    <div class="paytable-item" style="font-size: 14px; margin-top: 8px; border-color: #ffaa00;">2 stejné → 0.5x</div>
+</div>
             </div>
         </div>
     </div>
@@ -174,6 +175,7 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
