--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -35,8 +35,10 @@
     <div id="topButtons">
         <button id="dailyBonus" onclick="claimDailyBonus()">🎁 DENNÍ BONUS</button>
         <button id="shopBtn" onclick="switchGame('shop')">🛍️ OBCHOD</button>
+        <button id="paytableToggleBtn">💰 VÝHRY</button> 
     </div>
 </div>
+
 
 <div id="wrapper">
     <div id="gameSelector">
@@ -178,3 +180,4 @@
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
