--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -35,6 +35,7 @@
     <div id="topButtons">
         <button id="dailyBonus" onclick="claimDailyBonus()">🎁 DENNÍ BONUS</button>
         <button id="shopBtn" onclick="switchGame('shop')">🛍️ OBCHOD</button>
+         <button id="showPaytableBtn" onclick="togglePaytable()">💰 ZOBRAZIT VÝHRY</button>
     </div>
 </div>
 
@@ -178,3 +179,4 @@
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
