--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -146,7 +146,7 @@
             <div id="shopGrid"></div>
         </div>
 
-        <!-- PAYTABLE GAME (NEW) -->
+       <!-- PAYTABLE GAME -->
         <div id="paytableGame" class="game-container">
             <div class="paytable-fullscreen">
                 <h2 style="color: #00ffff; font-size: 36px; text-align: center; margin-bottom: 20px; text-shadow: 0 0 20px #00ffff;">💰 VÝPLATNÍ TABULKA 💰</h2>
@@ -192,7 +192,6 @@
                 </div>
             </div>
         </div>
-    </div>
 
     <!-- WIN MODAL -->
     <div id="winModal" class="modal">
@@ -219,3 +218,4 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
