--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
 
-                    <div id="slotControls">
+                   <div id="slotControls">
                         <div id="betAmount">Sázka: <span id="currentBet">10</span> 🪙</div>
                         <div class="bet-controls">
                             <button class="bet-btn" onclick="setBet(10)">10 🪙</button>
@@ -84,6 +84,8 @@
                         <div id="slotResult"></div>
                     </div>
                 </div>
+            </div>
+        </div>
 
         <!-- WHEEL GAME -->
         <div id="wheelGame" class="game-container">
@@ -199,5 +201,6 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
