--- a/tetris.html
+++ b/tetris.html
@@ -1506,7 +1506,7 @@ body {
         <div class="xp-reward">
             ⭐ +<span id="earnedXP">0</span> XP
         </div>
-        <p id="saveMessage" style="font-size: 18px; color: #00ff00; margin: 20px 0;">
+        <p id="saveMessage" style="font-size: 18px; color: #00
             ✅ Skóre automaticky uloženo!
         </p>
         <button class="menuBtn" onclick="backToMainMenu()">🏠 Zpět do menu</button>
@@ -2982,6 +2982,7 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
