--- a/stranka.html
+++ b/stranka.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hlavní menu</title>
 <style>
+/* --- ZÁKLADNÍ NASTAVENÍ --- */
 * {
     margin: 0;
     padding: 0;
@@ -18,6 +19,7 @@ body {
     background: #000;
 }
 
+/* --- POZADÍ A VIDEO --- */
 #mainMenu {
     position: fixed;
     top: 0; left: 0; right: 0; height: 100vh;
@@ -49,6 +51,7 @@ body {
     z-index: 1;
 }
 
+/* --- LEVÁ TLAČÍTKA (MENU) --- */
 .left-buttons {
     position: relative;
     z-index: 2;
@@ -56,12 +59,13 @@ body {
     flex-direction: column;
     gap: 15px;
     margin-top: 80px;
+    width: 100%; /* Důležité pro mobil */
+    max-width: 320px;
 }
 
 .left-buttons button {
     position: relative;
-    padding: 0;
-    min-width: 280px;
+    width: 100%;
     height: 70px;
     border: none;
     background: transparent;
@@ -76,11 +80,9 @@ body {
     inset: 0;
     background: 
         linear-gradient(135deg, rgba(200,0,0,0.95) 0%, rgba(100,0,0,0.98) 100%),
-        repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(0,0,0,0.1) 10px, rgba(0,0,0,0.1) 20px);
-    clip-path: polygon(0 0, 95% 0, 100% 100%, 5% 100%);
-    box-shadow: 
-        inset 0 3px 0 rgba(255,255,255,0.25),
-        0 8px 20px rgba(0,0,0,0.8);
+        repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(0,0,0,0.05) 10px, rgba(0,0,0,0.05) 20px);
+    clip-path: polygon(0 0, 92% 0, 100% 100%, 8% 100%);
+    box-shadow: inset 0 3px 0 rgba(255,255,255,0.2), 0 8px 20px rgba(0,0,0,0.6);
     transition: all 0.3s ease;
 }
 
@@ -88,166 +90,72 @@ body {
     position: relative;
     z-index: 3;
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 900;
     letter-spacing: 2px;
     text-transform: uppercase;
-    text-shadow: 
-        0 0 15px rgba(255,0,0,0.9),
-        2px 2px 6px rgba(0,0,0,1);
+    text-shadow: 0 0 10px rgba(255,0,0,0.8), 2px 2px 4px rgba(0,0,0,1);
     display: flex;
     align-items: center;
     gap: 12px;
-    padding-left: 30px;
+    padding-left: 25px;
 }
 
 .left-buttons button:hover::before {
-    background: 
-        linear-gradient(135deg, rgba(255,20,20,1) 0%, rgba(150,0,0,1) 100%);
-    transform: translateX(8px);
-}
-
-.left-buttons button span::before {
-    content: attr(data-icon);
-    font-size: 24px;
+    background: linear-gradient(135deg, rgba(255,20,20,1) 0%, rgba(150,0,0,1) 100%);
+    transform: scale(1.05) translateX(10px);
 }
 
 .admin-btn::before {
-    background: 
-        linear-gradient(135deg, rgba(200,100,0,0.95) 0%, rgba(100,50,0,0.98) 100%) !important;
+    background: linear-gradient(135deg, rgba(200,100,0,0.95) 0%, rgba(100,50,0,0.98) 100%) !important;
 }
 
+/* --- HORNÍ LIŠTA (ONLINE / AUTH) --- */
 #authButtons {
     position: absolute;
     top: 20px;
-    right: 30px;
+    right: 20px;
     display: flex;
-    gap: 12px;
+    gap: 10px;
     align-items: center;
-    z-index: 2;
+    z-index: 52;
 }
 
 #onlineCounter {
     padding: 8px 16px;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.85);
     color: #0f0;
     font-weight: 900;
-    font-size: 14px;
-    border: 2px solid rgba(0,255,0,0.5);
-    box-shadow: 0 0 20px rgba(0,255,0,0.4);
-    text-shadow: 0 0 10px rgba(0,255,0,0.9);
-    clip-path: polygon(8% 0, 100% 0, 92% 100%, 0 100%);
+    font-size: 13px;
+    border: 1px solid rgba(0,255,0,0.4);
+    box-shadow: 0 0 15px rgba(0,255,0,0.2);
+    text-shadow: 0 0 8px rgba(0,255,0,0.8);
+    clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%);
 }
 
 #authButtons button {
-    padding: 12px 28px;
-    border: 2px solid rgba(200,0,0,0.7);
-    background: linear-gradient(135deg, rgba(40,40,40,0.9) 0%, rgba(20,20,20,0.95) 100%);
+    padding: 10px 20px;
+    border: 1px solid rgba(200,0,0,0.5);
+    background: rgba(20,20,20,0.9);
     color: #fff;
     font-weight: 900;
-    font-size: 14px;
-    letter-spacing: 1px;
+    font-size: 13px;
     text-transform: uppercase;
     cursor: pointer;
-    box-shadow: 0 0 20px rgba(200,0,0,0.5);
-    transition: all 0.3s ease;
-    text-shadow: 0 0 10px rgba(255,0,0,0.7);
-    clip-path: polygon(8% 0, 100% 0, 92% 100%, 0 100%);
+    transition: all 0.2s ease;
+    clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%);
 }
 
 #authButtons button:hover {
-    background: linear-gradient(135deg, rgba(200,0,0,0.9) 0%, rgba(120,0,0,0.95) 100%);
-    transform: translateY(-2px);
+    background: #c80000;
+    box-shadow: 0 0 15px rgba(200,0,0,0.5);
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: rgba(0, 0, 0, 0.85);
-    backdrop-filter: blur(5px);
-    justify-content: center;
-    align-items: center;
-    z-index: 100;
-}
-
-.modal-content {
-    background: linear-gradient(135deg, rgba(30,30,30,0.98) 0%, rgba(15,15,15,0.99) 100%);
-    padding: 40px;
-    border: 3px solid rgba(200,0,0,0.7);
-    width: 420px;
-    text-align: center;
-    box-shadow: 0 0 50px rgba(255,0,0,0.7);
-    clip-path: polygon(3% 0, 100% 0, 97% 100%, 0 100%);
-    position: relative;
-}
-
-.modal-content h3 {
-    color: #fff;
-    font-size: 28px;
-    font-weight: 900;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    text-shadow: 0 0 20px rgba(255,0,0,0.9);
-    margin-bottom: 20px;
-}
-
-.modal-content input {
-    width: 100%;
-    padding: 15px 20px;
-    margin: 10px 0;
-    border: 2px solid rgba(200,0,0,0.5);
-    background: rgba(0,0,0,0.6);
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    clip-path: polygon(2% 0, 100% 0, 98% 100%, 0 100%);
-}
-
-.modal-content input::placeholder {
-    color: rgba(255, 255, 255, 0.4);
-}
-
-.modal-content input:focus {
-    outline: none;
-    border-color: rgba(255,30,30,0.9);
-    box-shadow: 0 0 25px rgba(255,0,0,0.6);
-}
-
-.modal-buttons {
-    display: flex;
-    gap: 15px;
-    margin-top: 20px;
-}
-
-.modal-btn {
-    flex: 1;
-    padding: 15px;
-    border: 2px solid rgba(200,0,0,0.7);
-    background: linear-gradient(135deg, rgba(200,0,0,0.9) 0%, rgba(100,0,0,0.95) 100%);
-    color: #fff;
-    font-weight: 900;
-    font-size: 16px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    cursor: pointer;
-    text-shadow: 0 0 12px rgba(255,0,0,0.9);
-    clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
-    transition: all 0.3s ease;
-}
-
-.modal-btn:hover {
-    background: linear-gradient(135deg, rgba(255,20,20,1) 0%, rgba(150,0,0,1) 100%);
-    transform: translateY(-3px);
-}
-
-.modal-btn.cancel {
-    background: linear-gradient(135deg, rgba(60,60,60,0.9) 0%, rgba(30,30,30,0.95) 100%);
-    border-color: rgba(100,100,100,0.6);
-}
-
-.modal-btn.cancel:hover {
-    background: linear-gradient(135deg, rgba(80,80,80,1) 0%, rgba(50,50,50,1) 100%);
+/* --- PANELY (CHAT, ADMIN, MODAL) --- */
+.modal-content, #chatPanel, #adminPanel {
+    background: linear-gradient(135deg, rgba(25,25,25,0.98) 0%, rgba(10,10,10,1) 100%);
+    border: 2px solid rgba(200,0,0,0.6);
+    box-shadow: 0 0 40px rgba(0,0,0,0.9);
 }
 
 #chatPanel {
@@ -255,165 +163,68 @@ body {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 400px;
+    width: 380px;
     height: 500px;
-    background: linear-gradient(135deg, rgba(20,20,20,0.98) 0%, rgba(10,10,10,0.99) 100%);
-    border: 3px solid rgba(200,0,0,0.7);
-    clip-path: polygon(2% 0, 100% 0, 98% 100%, 0 100%);
     z-index: 99;
     flex-direction: column;
 }
 
-#chatHeader {
-    padding: 15px;
-    background: rgba(200,0,0,0.3);
-    border-bottom: 2px solid rgba(200,0,0,0.7);
-    display: flex;
-    justify-content: space-between;
+/* --- MOBILE OPTIMIZATION (Media Queries) --- */
+@media screen and (max-width: 768px) {
+    #mainMenu {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    #authButtons {
+        position: relative;
+        top: 0; right: 0;
+        width: 100%;
+        justify-content: center;
+        margin-top: 10px;
+        order: -1; /* Posune auth nad menu */
+    }
+
+    .left-buttons {
+        margin-top: 30px;
+        max-width: 90%;
+        align-items: center;
+    }
+
+    .left-buttons button {
+        height: 60px;
+    }
+
+    .left-buttons button span {
+        font-size: 15px;
+        padding-left: 0;
+        justify-content: center;
+    }
+
+    .left-buttons button:hover::before {
+        transform: scale(1.02); /* Na mobilu bez posunu do strany */
+    }
+
+    #chatPanel {
+        width: 100%;
+        height: 50vh;
+        bottom: 0;
+        right: 0;
+    }
+
+    .modal-content {
+        width: 95%;
+        padding: 20px;
+    }
 }
 
-#chatHeader h4 {
-    color: #fff;
-    font-size: 18px;
-    font-weight: 900;
-    text-transform: uppercase;
-    text-shadow: 0 0 15px rgba(255,0,0,0.9);
-}
-
-#closeChatBtn {
-    background: rgba(200,0,0,0.8);
-    border: none;
-    color: #fff;
-    font-size: 20px;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    font-weight: 900;
-}
-
-#chatMessages {
-    flex: 1;
-    overflow-y: auto;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.chat-message {
-    padding: 10px 15px;
-    background: rgba(40,40,40,0.8);
-    border-left: 3px solid rgba(200,0,0,0.7);
-    color: #fff;
-    font-size: 14px;
-}
-
-.chat-message .chat-user {
-    color: #ff3333;
-    font-weight: 900;
-    margin-right: 8px;
-}
-
-.chat-message.admin {
-    border-left-color: rgba(255,150,0,0.9);
-    background: rgba(60,40,20,0.8);
-}
-
-.chat-message.admin .chat-user {
-    color: #ff9900;
-}
-
-.chat-message.guest {
-    border-left-color: rgba(100,100,200,0.7);
-}
-
-.chat-message.guest .chat-user {
-    color: #6699ff;
-}
-
-#chatInput {
-    display: flex;
-    gap: 10px;
-    padding: 15px;
-    border-top: 2px solid rgba(200,0,0,0.7);
-}
-
-#chatInput input {
-    flex: 1;
-    padding: 12px;
-    border: 2px solid rgba(200,0,0,0.5);
-    background: rgba(0,0,0,0.6);
-    color: #fff;
-}
-
-#chatInput button {
-    padding: 12px 20px;
-    border: 2px solid rgba(200,0,0,0.7);
-    background: rgba(200,0,0,0.9);
-    color: #fff;
-    font-weight: 900;
-    cursor: pointer;
-}
-
-#adminPanel {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    max-height: 80vh;
-    background: linear-gradient(135deg, rgba(30,30,30,0.98) 0%, rgba(15,15,15,0.99) 100%);
-    border: 3px solid rgba(200,100,0,0.8);
-    z-index: 101;
-    overflow-y: auto;
-    padding: 30px;
-}
-
-#adminPanel h3 {
-    color: #ff9900;
-    font-size: 24px;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.admin-section {
-    margin-bottom: 25px;
-    padding: 20px;
-    background: rgba(0,0,0,0.5);
-    border: 2px solid rgba(200,100,0,0.5);
-}
-
-.admin-section h4 {
-    color: #fff;
-    margin-bottom: 15px;
-}
-
-.admin-actions button {
-    width: 100%;
-    padding: 12px;
-    margin: 5px 0;
-    border: 2px solid rgba(200,100,0,0.7);
-    background: rgba(200,100,0,0.8);
-    color: #fff;
-    font-weight: 900;
-    cursor: pointer;
-    text-transform: uppercase;
-}
-
-#usersList {
-    display: none;
-    margin-top: 15px;
-    max-height: 300px;
-    overflow-y: auto;
-}
-
+/* --- SCROLLBAR --- */
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
 }
-
 ::-webkit-scrollbar-thumb {
-    background: rgba(200,0,0,0.7);
+    background: #c80000;
 }
 </style>
 </head>
@@ -1057,3 +868,4 @@ window.onload = async function() {
 </script>
 </body>
 </html>
+
