--- a/archive.html
+++ b/archive.html
@@ -76,21 +76,8 @@ body {
     right: 30px;
     display: flex;
     gap: 12px;
-    align-items: center;
+    flex-direction: column;
     z-index: 100;
-}
-
-#onlineCounter {
-    padding: 8px 16px;
-    background: rgba(0,0,0,0.8);
-    color: #0f0;
-    font-weight: 900;
-    font-size: 14px;
-    letter-spacing: 1px;
-    border: 2px solid rgba(0,255,0,0.5);
-    box-shadow: 0 0 20px rgba(0,255,0,0.4);
-    text-shadow: 0 0 10px rgba(0,255,0,0.9);
-    clip-path: polygon(8% 0, 100% 0, 92% 100%, 0 100%);
 }
 
 #authButtons button {
@@ -131,9 +118,10 @@ h1 {
     position: relative;
     z-index: 2;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     gap: 30px;
     margin: 0 0 50px;
+    align-items: center;
 }
 
 .category-buttons button {
@@ -189,8 +177,8 @@ h1 {
 #archiveContent {
     position: relative;
     z-index: 2;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    display: flex;
+    flex-direction: column;
     gap: 30px;
     padding: 0 40px 80px;
     max-width: 1400px;
@@ -201,16 +189,10 @@ h1 {
     position: relative;
     background: linear-gradient(135deg, rgba(30,30,30,0.95) 0%, rgba(15,15,15,0.98) 100%);
     border: 2px solid rgba(200,0,0,0.4);
-    clip-path: polygon(0 0, 95% 0, 100% 5%, 100% 100%, 5% 100%, 0 95%);
     overflow: hidden;
     box-shadow: 0 5px 20px rgba(0,0,0,0.8), 0 0 20px rgba(200,0,0,0.2);
     transition: all 0.4s ease;
-}
-
-.image-card:hover {
-    transform: translateY(-8px);
-    border-color: rgba(255,30,30,0.8);
-    box-shadow: 0 15px 40px rgba(0,0,0,0.9), 0 0 40px rgba(255,0,0,0.6);
+    width: 100%;
 }
 
 .image-card img {
@@ -244,7 +226,6 @@ h1 {
     clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%);
     opacity: 0;
     display: none;
-    z-index: 10;
 }
 
 .image-card:hover .delete-btn {
@@ -260,7 +241,6 @@ h1 {
     display: block;
 }
 
-/* Fullscreen Image Viewer */
 #fullscreenViewer {
     display: none;
     position: fixed;
@@ -313,7 +293,6 @@ h1 {
     box-shadow: 0 0 50px rgba(255,0,0,1);
 }
 
-/* Upload Modal */
 #uploadModal {
     display: none;
     position: fixed;
@@ -374,6 +353,7 @@ h1 {
 .upload-buttons {
     display: flex;
     gap: 15px;
+    flex-direction: column;
 }
 
 .upload-buttons button {
@@ -459,6 +439,7 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 20px;
+    flex-direction: column;
 }
 
 .modal-buttons button {
@@ -476,49 +457,6 @@ h1 {
 
 .modal-buttons button:hover {
     background: linear-gradient(135deg, rgba(255,20,20,1) 0%, rgba(150,0,0,1) 100%);
-}
-
-/* Media Queries */
-@media (max-width: 768px) {
-    h1 {
-        font-size: 32px;
-        margin: 80px 0 30px;
-    }
-    .category-buttons {
-        flex-direction: column;
-    }
-    .category-buttons button {
-        font-size: 16px;
-        padding: 12px 30px;
-    }
-    #archiveContent {
-        padding: 0 20px 40px;
-    }
-    .image-card {
-        width: 100%;
-    }
-    .image-card img {
-        height: 200px;
-    }
-}
-
-@media (max-width: 480px) {
-    #backBtn {
-        padding: 10px 20px;
-        font-size: 14px;
-    }
-    #authButtons button {
-        font-size: 12px;
-        padding: 10px 20px;
-    }
-    .category-buttons button {
-        font-size: 14px;
-        padding: 10px 25px;
-    }
-    #uploadContent {
-        padding: 30px;
-        width: 90%;
-    }
 }
 </style>
 </head>
@@ -1029,6 +967,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
