--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!-- LANDSCAPE WARNING -->
+<div id="landscapeWarning">
+    <div class="warning-content">
+        <h2>📱 OTOČ TELEFON 📱</h2>
+        <div class="rotate-icon">🔄</div>
+        <p>
+            Tato hra je optimalizovaná<br>
+            pouze pro <strong>svislý režim</strong>.<br>
+            <br>
+            Otoč prosím telefon na výšku!
+        </p>
+    </div>
+</div>
     <!-- LOADING SCREEN -->
     <div id="loadingScreen">
         <div class="loading-content">
@@ -201,6 +214,7 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
