--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- LANDSCAPE WARNING -->
-<div id="landscapeWarning">
+<div id="landscapeWarning" style="display: none;">
     <div class="warning-content">
         <h2>📱 OTOČ TELEFON 📱</h2>
         <div class="rotate-icon">🔄</div>
@@ -214,6 +214,7 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
