--- a/hry.html
+++ b/hry.html
@@ -13,76 +13,57 @@
     }
 
     body {
-    font-family: 'Rajdhani', sans-serif;
-    overflow: hidden;
-    background: var(--dark-bg);
-    color: #fff;
-    min-height: 100vh;
-}
+        font-family: 'Arial Black', 'Impact', sans-serif;
+        min-height: 100vh;
+        background:
+            linear-gradient(135deg, rgba(0,0,0,0.95) 0%, rgba(20,0,0,0.98) 100%),
+            repeating-linear-gradient(45deg, transparent, transparent 50px, rgba(100,0,0,0.03) 50px, rgba(100,0,0,0.03) 100px);
+        overflow-x: hidden;
+        position: relative;
+    }
 
-/* Přidej před body tento root config: */
-:root {
-    --primary-red: #ff0844;
-    --secondary-red: #c20033;
-    --dark-bg: #0a0a0f;
-    --card-bg: rgba(20, 20, 30, 0.6);
-    --accent-cyan: #00d9ff;
-    --accent-purple: #b042ff;
-}
+    body::before {
+        content: "";
+        position: fixed;
+        inset: 0;
+        background: 
+            radial-gradient(ellipse at 20% 30%, rgba(200,0,0,0.1) 0%, transparent 50%),
+            radial-gradient(ellipse at 80% 70%, rgba(100,0,0,0.15) 0%, transparent 50%);
+        animation: bgPulse 8s ease-in-out infinite;
+        pointer-events: none;
+    }
 
-/* A obal celou stránku do containeru s video pozadím */
     @keyframes bgPulse {
         0%, 100% { opacity: 0.5; }
         50% { opacity: 0.8; }
     }
 
-    .back-button {
-    position: relative;
-    padding: 18px 50px;
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-    color: #fff;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 1.1rem;
-    font-weight: 700;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-    overflow: hidden;
-    z-index: 100;
-}
-
-.back-button::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), transparent);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.back-button:hover::before {
-    opacity: 1;
-}
-
-.back-button:hover {
-    transform: translateY(-5px);
-    border-color: rgba(255, 255, 255, 0.4);
-    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
-}
+    #backBtn {
+        position: fixed;
+        top: 30px;
+        left: 30px;
+        padding: 14px 28px;
+        border: 2px solid rgba(200,0,0,0.7);
+        background: linear-gradient(135deg, rgba(40,40,40,0.9) 0%, rgba(20,20,20,0.95) 100%);
+        color: #fff;
+        font-weight: 900;
+        font-size: 16px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        cursor: pointer;
+        box-shadow: 0 0 20px rgba(200,0,0,0.5);
+        transition: all 0.3s ease;
+        text-shadow: 0 0 10px rgba(255,0,0,0.7);
+        clip-path: polygon(8% 0, 100% 0, 92% 100%, 0 100%);
+        z-index: 100;
+    }
 
     #backBtn:hover {
         background: linear-gradient(135deg, rgba(200,0,0,0.9) 0%, rgba(120,0,0,0.95) 100%);
         transform: translateY(-2px);
     }
 
-   
-        cursor: pointer;
-        box-shadow: 0 0 20px rgba(200,0,0,0.5);
-        transition: all 0.3s ease; #authButtons {
+    #authButtons {
         position: fixed;
         top: 30px;
         right: 30px;
@@ -113,6 +94,9 @@
         font-size: 14px;
         letter-spacing: 1px;
         text-transform: uppercase;
+        cursor: pointer;
+        box-shadow: 0 0 20px rgba(200,0,0,0.5);
+        transition: all 0.3s ease;
         text-shadow: 0 0 10px rgba(255,0,0,0.7);
         clip-path: polygon(8% 0, 100% 0, 92% 100%, 0 100%);
     }
@@ -122,53 +106,16 @@
         transform: translateY(-2px);
     }
 
-    .page-title {
-    font-family: 'Orbitron', sans-serif;
-    font-size: clamp(3rem, 6vw, 5rem);
-    font-weight: 900;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: 8px;
-    text-align: center;
-    background: linear-gradient(135deg, #fff 0%, var(--accent-cyan) 50%, var(--primary-red) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    position: relative;
-    animation: titleEntrance 1s ease-out;
-    filter: drop-shadow(0 0 20px rgba(255, 8, 68, 0.5));
-    margin: 100px 0 60px;
-}
-
-@keyframes titleEntrance {
-    from {
-        opacity: 0;
-        transform: translateY(-50px) scale(0.9);
-        filter: blur(10px);
+    h1 {
+        text-align: center;
+        color: #fff;
+        font-size: 48px;
+        font-weight: 900;
+        letter-spacing: 4px;
+        text-transform: uppercase;
+        margin: 80px 0 50px;
+        text-shadow: 0 0 25px rgba(255,0,0,0.9), 3px 3px 8px rgba(0,0,0,1);
     }
-    to {
-        opacity: 1;
-        transform: translateY(0) scale(1);
-        filter: blur(0);
-    }
-}
-
-.page-title::after {
-    content: '';
-    position: absolute;
-    bottom: -15px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 200px;
-    height: 3px;
-    background: linear-gradient(90deg, transparent, var(--primary-red), transparent);
-    animation: lineGlow 2s ease-in-out infinite;
-}
-
-@keyframes lineGlow {
-    0%, 100% { opacity: 0.5; }
-    50% { opacity: 1; box-shadow: 0 0 20px var(--primary-red); }
-}
 
     /* Admin Panel */
     #adminPanel {
@@ -252,79 +199,15 @@
     }
 
     .game-card {
-    position: relative;
-    width: 100%;
-    background: rgba(255, 255, 255, 0.02);
-    backdrop-filter: blur(20px);
-    border-radius: 24px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    cursor: pointer;
-    transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-    overflow: hidden;
-    animation: cardEntrance 0.8s ease-out backwards;
-}
-
-.game-card::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(135deg, 
-        rgba(255, 8, 68, 0.1) 0%, 
-        rgba(176, 66, 255, 0.05) 50%,
-        rgba(0, 217, 255, 0.1) 100%);
-    opacity: 0;
-    transition: opacity 0.5s ease;
-}
-
-.game-card:hover::before {
-    opacity: 1;
-}
-
-.game-card::after {
-    content: '';
-    position: absolute;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-    background: conic-gradient(
-        from 0deg at 50% 50%,
-        transparent 0deg,
-        var(--primary-red) 60deg,
-        transparent 120deg
-    );
-    opacity: 0;
-    transition: opacity 0.5s ease, transform 0.5s ease;
-    animation: rotateBorder 8s linear infinite;
-}
-
-@keyframes rotateBorder {
-    to { transform: rotate(360deg); }
-}
-
-.game-card:hover::after {
-    opacity: 0.3;
-}
-
-.game-card:hover {
-    transform: translateY(-12px) scale(1.02);
-    border-color: rgba(255, 8, 68, 0.5);
-    box-shadow: 
-        0 25px 60px rgba(255, 8, 68, 0.4),
-        0 0 80px rgba(255, 8, 68, 0.2),
-        inset 0 0 40px rgba(255, 8, 68, 0.1);
-}
-
-@keyframes cardEntrance {
-    from {
-        opacity: 0;
-        transform: translateY(40px) rotateX(-10deg);
+        position: relative;
+        background: linear-gradient(135deg, rgba(30,30,30,0.95) 0%, rgba(15,15,15,0.98) 100%);
+        border: 2px solid rgba(200,0,0,0.4);
+        clip-path: polygon(0 0, 95% 0, 100% 10%, 100% 100%, 5% 100%, 0 90%);
+        transition: all 0.4s ease;
+        cursor: pointer;
+        overflow: hidden;
+        box-shadow: 0 5px 20px rgba(0,0,0,0.8), 0 0 20px rgba(200,0,0,0.2);
     }
-    to {
-        opacity: 1;
-        transform: translateY(0) rotateX(0);
-    }
-}
 
     .game-card:hover {
         transform: translateY(-10px) scale(1.02);
@@ -512,70 +395,47 @@
         background: linear-gradient(135deg, rgba(60,60,60,0.9) 0%, rgba(30,30,30,0.95) 100%);
     }
 
+    /* Chat panel */
     #chatPanel {
-    display: none;
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    width: 420px;
-    height: 550px;
-    background: rgba(20, 20, 30, 0.95);
-    backdrop-filter: blur(20px);
-    border: 1px solid rgba(255, 8, 68, 0.3);
-    border-radius: 20px;
-    z-index: 999;
-    flex-direction: column;
-    box-shadow: 0 20px 60px rgba(0, 0, 0, 0.8);
-    animation: chatSlideUp 0.4s ease-out;
-}
-
-@keyframes chatSlideUp {
-    from {
-        opacity: 0;
-        transform: translateY(50px);
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        width: 400px;
+        height: 500px;
+        background: linear-gradient(135deg, rgba(20,20,20,0.98) 0%, rgba(10,10,10,0.99) 100%);
+        border: 3px solid rgba(200,0,0,0.7);
+        clip-path: polygon(2% 0, 100% 0, 98% 100%, 0 100%);
+        z-index: 999;
+        flex-direction: column;
     }
-    to {
-        opacity: 1;
-        transform: translateY(0);
+
+    #chatHeader {
+        padding: 15px;
+        background: rgba(200,0,0,0.3);
+        border-bottom: 2px solid rgba(200,0,0,0.7);
+        display: flex;
+        justify-content: space-between;
     }
-}
 
-#chatHeader {
-    padding: 20px;
-    background: rgba(255, 8, 68, 0.1);
-    border-bottom: 1px solid rgba(255, 8, 68, 0.3);
-    border-radius: 20px 20px 0 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+    #chatHeader h4 {
+        color: #fff;
+        font-size: 18px;
+        font-weight: 900;
+        text-transform: uppercase;
+        text-shadow: 0 0 15px rgba(255,0,0,0.9);
+    }
 
-#chatHeader h4 {
-    font-family: 'Orbitron', sans-serif;
-    color: #fff;
-    font-size: 1.3rem;
-    font-weight: 700;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-}
-
-#closeChatBtn {
-    background: rgba(255, 8, 68, 0.3);
-    border: 1px solid rgba(255, 8, 68, 0.5);
-    border-radius: 8px;
-    color: #fff;
-    font-size: 1.5rem;
-    width: 36px;
-    height: 36px;
-    cursor: pointer;
-    font-weight: 700;
-    transition: all 0.3s ease;
-}
-
-#closeChatBtn:hover {
-    background: rgba(255, 8, 68, 0.5);
-    transform: rotate(90deg);
-}
+    #closeChatBtn {
+        background: rgba(200,0,0,0.8);
+        border: none;
+        color: #fff;
+        font-size: 20px;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+                font-weight: 900;
+    }
 
     #chatMessages {
         flex: 1;
@@ -672,68 +532,35 @@
         }
 
         #authButtons {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    z-index: 100;
-    animation: fadeInRight 0.8s ease-out 0.5s backwards;
-}
+            top: 20px;
+            right: 20px;
+            flex-direction: column;
+        }
 
-@keyframes fadeInRight {
-    from {
-        opacity: 0;
-        transform: translateX(50px);
+        #authButtons button {
+            font-size: 12px;
+            padding: 10px 20px;
+        }
+
+        #onlineCounter {
+            font-size: 12px;
+            padding: 6px 12px;
+        }
+
+        .game-card {
+            padding: 10px;
+        }
+
+        .game-title {
+            font-size: 18px;
+            letter-spacing: 1px;
+        }
+
+        .play-btn {
+            font-size: 14px;
+            padding: 12px;
+        }
     }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-#onlineCounter {
-    padding: 12px 20px;
-    background: rgba(0, 217, 255, 0.1);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(0, 217, 255, 0.3);
-    border-radius: 12px;
-    color: var(--accent-cyan);
-    font-weight: 700;
-    font-size: 0.95rem;
-    letter-spacing: 1px;
-    box-shadow: 0 0 20px rgba(0, 217, 255, 0.2);
-    transition: all 0.3s ease;
-}
-
-#onlineCounter:hover {
-    box-shadow: 0 0 30px rgba(0, 217, 255, 0.4);
-    transform: translateY(-2px);
-}
-
-#authButtons button {
-    padding: 12px 24px;
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 12px;
-    color: #fff;
-    font-family: 'Rajdhani', sans-serif;
-    font-weight: 700;
-    font-size: 0.95rem;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-#authButtons button:hover {
-    background: rgba(255, 8, 68, 0.2);
-    border-color: var(--primary-red);
-    transform: translateY(-2px);
-    box-shadow: 0 8px 20px rgba(255, 8, 68, 0.3);
-}
 
     /* For very small devices */
     @media (max-width: 480px) {
