--- a/hry.html
+++ b/hry.html
@@ -36,6 +36,12 @@ body {
     overflow-y: auto;
 }
 
+#backBtn {
+    font-size: 12px;
+    padding: 8px 18px;
+}
+
+
 #menuVideo {
     position: fixed;
     inset: 0;
@@ -1502,6 +1508,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
